k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-backend
  template:
    metadata:
      labels:
        app: express-backend
    spec:
      containers:
        - name: express-backend
          image: express-backend:latest
          ports:
            - containerPort: 3000
