k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-frontend
  template:
    metadata:
      labels:
        app: flask-frontend
    spec:
      containers:
        - name: flask-frontend
          image: flask-frontend:latest
          ports:
            - containerPort: 5000
