k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-backend-svc
spec:
  selector:
    app: express-backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
