k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-frontend-svc
spec:
  selector:
    app: flask-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
