k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-frontend-svc
                port:
                  number: 80
